--- a/Reto_Pinion/index.html
+++ b/Reto_Pinion/index.html
@@ -6,16 +6,11 @@
     <title>Reto Pinion</title>
 </head>
 <body>
-    <h1>Bienvenido a nuestro Reto Pinion</h1>
-    <section>
-        <article>
-            <h2>Conoce mas sobre nuestro reto pinion</h2>
-            <p>Descripcion del proyecto</p>
-        </article>
-        <article>
-            <h2>Objetivos de nuestro Reto Pinion</h2>
-            <p>Objetivos del proyecto</p>
-        </article>
-    </section>
+    <h1 id="title">Bienvenido a nuestro Reto Pinion</h1>
+    <div>
+        <a href="">
+            <button>Conoce mas Sobre nuestro Reto Pinion</button>
+        </a>
+    </div>
 </body>
 </html>
