--- a/Reto_Pinion/index.html
+++ b/Reto_Pinion/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Reto Pinion</title>
-    <link rel="stylesheet" href="Styles/Style_Index.CSS"
-</head>
+    <link rel="stylesheet" href="Styles/Style_Index.CSS">
+</head> 
 <body>
     <header>
         <h1 id="title">Bienvenido a nuestro Reto Pinion</h1>
