--- a/Reto_Pinion/index.html
+++ b/Reto_Pinion/index.html
@@ -11,7 +11,7 @@
         <h1 id="title">Bienvenido a nuestro Reto Pinion</h1>
     </header>
     <div>
-        <a href="">
+        <a href="Descripcion.html">
             <button>Conoce mas Sobre nuestro Reto Pinion</button>
         </a>
     </div>
