--- a/Reto_Pinion/index.html
+++ b/Reto_Pinion/index.html
@@ -12,7 +12,7 @@
     </header>
     <div>
         <a href="Descripcion.html">
-            <button>Conoce mas Sobre nuestro Reto Pinion</button>
+            <button Class="next">Conoce mas Sobre nuestro Reto Pinion</button>
         </a>
     </div>
 </body>
