--- a/Reto_Pinion/Descripcion.html
+++ b/Reto_Pinion/Descripcion.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Reto pinion</title>
+    <link rel="stylesheet" href="styles/style_Descripcion.css">
 </head>
 <body>
     <header>
@@ -12,7 +13,7 @@
     <section>
         <article>
             <h1>Estos son los objetivos de nuestro Reto Pinion</h1>
-            <p></p>
+            <p>Objetivos</p>
         </article>
         <div>
             <a href="">
