--- a/Reto_Pinion/Descripcion.html
+++ b/Reto_Pinion/Descripcion.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Reto pinion</title>
-    <link rel="stylesheet" href="Styles/Style_Descripcion.css">
+    <link rel="stylesheet" href="Styles/">
 </head>
 <body>
     <header>
@@ -15,11 +15,11 @@
             <h1>Esto es nuestro Reto Pinion</h1>
             <p>Descripcion</p>
         </article>
-        <div>
-            <a href="">
-                <button>Descripcion</button>
-            </a>
-        </div>
     </section>
+    <footer>
+        <a href="">
+            <button>Descripcion</button>
+        </a>
+    </footer>
 </body>
 </html>
