--- a/Reto_Pinion/Descripcion.html
+++ b/Reto_Pinion/Descripcion.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Reto pinion</title>
-    <link rel="stylesheet" href="Styles/">
+    <link rel="stylesheet" href="Styles/Style_Descripcion.css">
 </head>
 <body>
     <header>
@@ -17,8 +17,8 @@
         </article>
     </section>
     <footer>
-        <a href="">
-            <button>Descripcion</button>
+        <a href="index.html">
+            <button>Regresar</button>
         </a>
     </footer>
 </body>
