--- a/Reto_Pinion/Descripcion.html
+++ b/Reto_Pinion/Descripcion.html
@@ -13,7 +13,13 @@
     <section>
         <article>
             <h1>Esto es nuestro Reto Pinion</h1>
-            <p>Descripcion</p>
+            <p>Proyecto de Ciudad Sustentable
+                Nuestro proyecto es una ciudad sustentable que hicimos en equipo. La idea es usar tecnología, pero sin dejar de cuidar el medio ambiente. En esta ciudad tenemos una casa inteligente (smart house). Le pusimos sensores de movimiento, luz y temperatura. Así, las luces se prenden cuando alguien entra a un cuarto y se apagan cuando ya no hay nadie, y la casa puede ahorrar energía. También la pensamos para que no se desperdicie tanta agua y al mismo tiempo sea cómoda para vivir.
+                También diseñamos un parque con áreas verdes, porque queríamos un lugar donde la gente pudiera caminar, hacer ejercicio o solo sentarse a platicar. En el pasto y las plantas pusimos un sistema de riego automático con sensores de humedad. Si la tierra está muy seca, el riego se enciende; si ya tiene suficiente agua, se apaga solo. De esta forma las plantas se mantienen bien, pero sin desperdiciar litros de agua.
+                En nuestra ciudad pasa un río, y sobre ese río construimos un puente levadizo. Este puente se levanta cuando un barco necesita pasar y después vuelve a bajar para que los carros sigan circulando. Cerca del río también colocamos una pequeña central hidroeléctrica, que usa la fuerza del agua para generar electricidad. Con eso, imaginamos que una parte de la ciudad podría funcionar con energía más limpia y con menos contaminación.
+                Para terminar, en las avenidas principales pusimos un sistema de semáforos sincronizados. Los programamos (en la idea del proyecto) para que cambien de color de forma coordinada, así hay menos tráfico, los carros no se quedan tanto tiempo parados y se genera menos humo.
+                En conjunto, nuestra ciudad sustentable muestra cómo se pueden juntar casa inteligente, parque ecológico, puente levadizo, central hidroeléctrica y semáforos sincronizados para hacer una ciudad más ordenada, cómoda y que trate de cuidar el planeta.
+            </p>
         </article>
     </section>
     <footer>
