--- a/indice.html
+++ b/indice.html
@@ -2,8 +2,8 @@
 <html>
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Chismografo</title>
-    <link rel="stylesheet" href="styles/style_inicio.css" />
+    <title>Reto Pinion</title>
+    <link rel="stylesheet" href="Styles/Style_indice.css" />
 </head>
 <body>
     <header>
