--- a/Reto_Pinion/index.html
+++ b/Reto_Pinion/index.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Reto Pinion</title>
-    <link rel="stylesheet" href="Styles/Style_Index.CSS">
+    <link rel="stylesheet" href="Styles/Style_Index.css">
 </head> 
 <body>
     <header>
         <h1 id="title">Bienvenido a nuestro Reto Pinion</h1>
     </header>
     <div>
-        <a href="Descripcion.html">
+        <a href="indice.html">
             <button Class="next">Conoce mas Sobre nuestro Reto Pinion</button>
         </a>
     </div>
