--- a/indice.html
+++ b/indice.html
@@ -11,18 +11,16 @@
     </header>
     <section class="scr">
         <a href="4-A.html">
-            <button id="A4">Chismes de 4-A</button>
+            <button id="problematica">¿Cual es nuestra problematica</button>
         </a>
         <a href="4-B.html">
-            <button id="B4">Chismes de 4-B</button>
+            <button id="resolver">¿Como pensamos resolverla?</button>
         </a>
         <a href="5-A.html">
-            <button id="A5">Chismes de 5-A</button>
+            <button id="proceso">Nuestro Proceso</button>
         </a>
         <a href="5-B.html">
-            <button id="B5">Chismes de 5-B</button>
-        <a href="6to.html">
-            <button id="A6">Chismes de 6-A</button>
+            <button id="descripicion">Descripcion</button>
         </a>
     </section>
 </body>
