--- a/Reto_Pinion/index.html
+++ b/Reto_Pinion/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Reto Pinion</title>
-    <link rel="stylesheet" href="Styles/Style_Index.css">
+    <link rel="stylesheet" href="Styles/Style_index.css">
 </head> 
 <body>
     <header>
