--- a/Reto_Pinion/indice.html
+++ b/Reto_Pinion/indice.html
@@ -3,7 +3,7 @@
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Reto Pinion</title>
-    <link rel="stylesheet" href="Reto_Pinion/Styles/Style_indice.css" />
+    <link rel="stylesheet" href="Styles/Style_indice.css" />
 </head>
 <body>
     <header>
