--- a/Reto_Pinion/index.html
+++ b/Reto_Pinion/index.html
@@ -11,6 +11,9 @@
         <h1 id="title">Bienvenido a nuestro Reto Pinion</h1>
     </header>
     <div>
+        <img scr="" width="400px">
+    </div>
+    <div>
         <a href="indice.html">
             <button Class="next">Conoce mas Sobre nuestro Reto Pinion</button>
         </a>
