--- a/Reto_Pinion/indice.html
+++ b/Reto_Pinion/indice.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <header>
-        <h1 id="text">¿De qué grupo quieres saber sus chismes?</h1>
+        <h1 id="text">¿Que quieres saber?</h1>
     </header>
     <section class="scr">
         <a href="4-A.html">
@@ -19,7 +19,7 @@
         <a href="5-A.html">
             <button id="proceso">Nuestro Proceso</button>
         </a>
-        <a href="5-B.html">
+        <a href="Descripcion.html">
             <button id="descripicion">Descripcion</button>
         </a>
     </section>
